# dualarm_mobile_mservo

./: .gitattributes  README.md
epos_tutorial/: CMakeLists.txt  package.xml
epos_tutorial/msg/: DesiredVel.msg  realVel.msg
epos_tutorial/srv/: VelCommand.srv
matlab_gen/jar/: epos_tutorial-0.0.0.md5  mobile_control-0.0.0.md5  path_planner-0.0.0.md5  sim_control-0.0.0.md5  vehicle_control-0.0.0.md5
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+epos_tutorial/: DesiredVel.m  Vel.m  VelCommandRequest.m  VelCommandResponse.m  realVel.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+mobile_control/: motorMsg.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+path_planner/: des_traj.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+sim_control/: cmdMsg.m  desiredMsg.m  groundMsg.m  motorDynamics.m  slamposeMsg.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+vehicle_control/: commendMsg.m  gnd.m  jointstatesMsg.m  motorsMsg.m  noise.m  posMsgs.m  positionMsg.m  time_loop.m
mobile_control/: CMakeLists.txt
path_planner/include/path_planner/: velocity_plan.hpp
sim_control/: CMakeLists.txt  package.xml
sim_control/include/sim_control/: controller_test.hpp  motor_vel_profile.hpp  odometry.hpp  tracking_controller_prev.hpp  tracking_pd_controller.hpp
sim_control/launch/: tracking_control.launch
sim_control/msg/: cmdMsg.msg  desiredMsg.msg  groundMsg.msg
sim_control/src/: motor_dynamics.cpp  motor_vel_profile.cpp  odometry.cpp  tracking_controller_prev.cpp  tracking_pd_controller.cpp
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/include/vehicle_control/: attitude_estimator.hpp  input_odometry.hpp  wheel_odometry.hpp
vehicle_control/launch/: mobile_ctrl.launch  tracking_controller.launch  vel_control.launch
vehicle_control/msg/: gnd.msg  noise.msg  positionMsg.msg  timeLoop.msg
vehicle_control/src/: attitude_estimator.cpp  encoder_actual.cpp  experiment_diamond.cpp  experiment_rectangle.cpp  experiment_route1.cpp  experiment_route2.cpp  mobile_controller.cpp  track_control.cpp  vel_cmd.cpp  vel_cmd_circle_fix.cpp  wheel_odometry.cpp
